--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -19,7 +19,7 @@ jobs:
   build:
 
     name: Build and test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v3
